Add zooming for code segment

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <p >Backbone.js does an excellent job of keeping data in sync between the HTML UI and your Javascript logic.
                 However the difficulties we face when
                 we build Javascript web applications are not completely addressed by Backbone.js . Sometimes the difficulty of
-                efficiently organizing the Javascript logic itself is prominent. Using the urls to lead the execution of Javascript logic
+                efficiently organizing the Javascript logic itself is prominent. Using urls to lead the execution of the Javascript logic
                 is a good way to implement your business logic. The browsers' assumption of a traditional server/client
-                model is not compromised, so the browsers' basic features can be preserved. It also helps resume the correct
+                model is not compromised, so the browsers' basic functions can be preserved. It also helps resume the correct
                 stage in your business flow from a stateless page.
             <p>Backbone.js provides
                 <a href="http://backbonejs.org/#Router">Router</a> component to map an url to a function.
