--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
             </ul>
         </div>
     </div>
+    <div id="sidebar">
+        <ul class="nav nav-tabs nav-stacked">
+            <li class="nav-header">Features:</li>
+            <li class="features-item"><a >URL-Action&nbsp;Mapping</a></li>
+            <li class="features-item"><a >Asynchronous&nbsp;Call</a></li>
+            <li class="features-item"><a >Event Hooks</a></li>
+            <li class="features-item"><a >Session Checking</a></li>
+            <li class="features-item"><a >Controllers&nbsp;Are<br/>Singletons</a></li>
+            <li class="features-item"><a >Controller<br/>Inheritance</a></li>
+        </ul>
+    </div>
 </header >
 
 <div class="container" >
