--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section id="introduction" class="chapter" >
             <h3 >Introduction</h3 >
 
-            <p >Backbone.js does an excellent job of keeping data in sync between the HTML UI and your Javascript logic.
+            <p >Backbone.js does an excellent job of keeping the HTML UI and your Javascript business in sync.
                 However the difficulties we face when
                 we build Javascript web applications are not completely addressed by Backbone.js . Sometimes the difficulty of
                 efficiently organizing the Javascript logic itself is prominent. Using urls to lead the execution of the Javascript logic
